src/main/webapp/css/multi-event-log-plugin.css
@charset "ISO-8859-1";

.main-window{
	background: #e6e6e6;
}

.banner-header{
	background-image:url('https://apromore.org/wp-content/uploads/2019/10/cropped-main-banner-img.png');
}

.banner-footer{
	background-image:url('https://apromore.org/wp-content/uploads/2019/10/cropped-main-banner-img.png');
	height: 1.5em;
}

.banner-logo{
	height: 3%;
	width: 12%;
	padding: 10px;
}

.card{
	background: white;
	box-shadow: 0 3px 7px 1px rgba(0,0,0,0.05);
	border-radius: 3px;
	width: 99%;
	margin: auto;
	padding: 10px;
	position: relative;
}

.left-panel{
	background: #b2b2b2;
	text-align: center;
	box-shadow: 0 3px 7px 1px rgba(0,0,0,0.05);
	border-radius: 3px;
	height: 100%;
	margin: auto;
	padding: 10px;
	position: relative;
}

.top-right-panel{
	height: 200px;
	width: 900px;
	background: #F2F2F2;
	text-align: center;
}

.bottom-right-panel{
	height: 300px;
	width: 900px;
	background: #FFFFFF;
	text-align: center;
}

.button-area{
	padding-bottom:40px;
}

.heading{
	font-size: 18pt;
}

.input-table-scroll-area{
	width: 700px;
	height: 300px;
	overflow: auto;
}

.consolidated-excerpt-grid{
	border: 1px solid black;
	overflow: auto;
}

.input-excerpt-grid{
	border: 1px solid black;
}

.expand-window{
	max-width: 90%;
	max-height: 90%;
	margin: auto;
	position: relative;
}

.file-list-div{
	text-align: left;
}

.file-list-row{
	padding-bottom: 7px;
}

.file-label{
	padding-left: 4px;
	font-weight: bold;
}

.eye-button{
	padding-right: 20%
}

.columns-class{
	background-color: #3f666c;
	border: 1px solid black;
	font-weight: bold;
}

.no-files-label .z-label{
	font-weight: bold;
}

.row-cell{
	border: 1px solid black;
}

.z-button{
	background-color: #6c453f;
	font-weight: bold;
}

.z-button:hover {
	color: #FFFFFF;
	border-color: transparent;
	background-color: #7a5752;
}

.z-button:focus {
	color: #FFFFFF;
	border-color: #FFA516;
	background-color: #7a5752;
}

.join-panel-columns{
	border-style: none;
	font-weight: bold;
}

.join-panel-column-list{
	border-style: none;
	font-weight: bold;
	background-color: #3f666c;
}

.z-tab {
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 13px;
	display: block;
	border-bottom: 2px solid transparent;
	margin: auto;
	line-height: 30px;
	background: #636363;
	text-align: center;
	position: relative;
	cursor: pointer;
	float: left;
	padding: 10px 16px;
}

.z-tabs-content {
	display: flex;
	min-height: 48px;
	border-collapse: separate;
	border-spacing: 0;
	background: #636363;
	margin: auto;
	padding-left: 0;
	padding-top: 0;
	list-style: none outside none;
	zoom: 1;
	clear: both;
}

.z-tab-selected {
	background: #6f6f6f;
}

.z-tab-selected:hover {
	background: #6f6f6f;
}

.z-tab:hover {
	background: #6f6f6f;
}

.z-tab-selected .z-tab-text {
	color: #ffffff;
}

.z-tab-selected .z-tab-text:hover {
	color: #ffffff;
}

.z-tab-text:hover {
	color: #ffffff;
}

.z-tab-text {
	font-style: normal;
	color: #ffffff;
	display: block;
	line-height: 24px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.z-tabpanel {
	border-top: 1px solid #D9D9D9;
	padding: 10px 0;
	zoom: 1;
	color: rgba(0,0,0,0.9);
}

